--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ h1 {
 
 p{
     width: 958px;
-    color: #9c9fa1;
+    color: #686a6b;
 }
 h2 {
      
@@ -64,7 +64,7 @@ a {
     width: 960px;
     margin: 0 auto;
     padding: 3%;
-    height: 400px;
+    height: 420px;
     margin-top: 3%;
     margin-bottom: -5%;
    
